@@ -320,45 +320,46 @@ SPI NAND Flash Support List:
 067. HEYANG HYF2GQ4UHCCAE
 068. HEYANG HYF1GQ4UDACAE
 069. HEYANG HYF2GQ4UDACAE
-070. PN PN26G01A-X
-071. PN PN26G02A-X
-072. PN PN26Q01A-X
-073. ATO ATO25D1GA
-074. ATO ATO25D2GA
-075. ATO ATO25D2GB
-076. FM FM25S01
-077. FM FM25S01A
-078. FM FM25S02A
-079. FM FM25G01B
-080. FM FM25G02B
-081. FM FM25G02C
-082. FM FM25G02
-083. XTX XT26G02B
-084. XTX XT26G01C
-085. XTX XT26G02C
-086. XTX XT26G01A
-087. XTX XT26G02A
-088. MIRA PSU1GS20BN
-089. BIWIN BWJX08U
-090. BIWIN BWET08U
-091. FORESEE FS35ND01GD1F1
-092. FORESEE FS35ND01GS1F1
-093. FORESEE FS35ND02GS2F1
-094. FORESEE FS35ND02GD1F1
-095. FORESEE FS35ND01GS1Y2
-096. FORESEE FS35ND02G-S3Y2
-097. FORESEE FS35ND04G-S2Y2
-098. DS DS35Q2GA
-099. DS DS35M2GA
-100. DS DS35Q1GA
-101. DS DS35M1GA
-102. FISON CS11G0T0A0AA
-103. FISON CS11G1T0A0AA
-104. FISON CS11G0G0A0AA
-105. TYM TYM25D2GA01
-106. TYM TYM25D2GA02
-107. TYM TYM25D1GA03
-108. XINCUN XCSP1AAWH-NT
+070. HEYANG HYF2GQ4UTACAE
+071. PN PN26G01A-X
+072. PN PN26G02A-X
+073. PN PN26Q01A-X
+074. ATO ATO25D1GA
+075. ATO ATO25D2GA
+076. ATO ATO25D2GB
+077. FM FM25S01
+078. FM FM25S01A
+079. FM FM25S02A
+080. FM FM25G01B
+081. FM FM25G02B
+082. FM FM25G02C
+083. FM FM25G02
+084. XTX XT26G02B
+085. XTX XT26G01C
+086. XTX XT26G02C
+087. XTX XT26G01A
+088. XTX XT26G02A
+089. MIRA PSU1GS20BN
+090. BIWIN BWJX08U
+091. BIWIN BWET08U
+092. FORESEE FS35ND01GD1F1
+093. FORESEE FS35ND01GS1F1
+094. FORESEE FS35ND02GS2F1
+095. FORESEE FS35ND02GD1F1
+096. FORESEE FS35ND01GS1Y2
+097. FORESEE FS35ND02G-S3Y2
+098. FORESEE FS35ND04G-S2Y2
+099. DS DS35Q2GA
+100. DS DS35M2GA
+101. DS DS35Q1GA
+102. DS DS35M1GA
+103. FISON CS11G0T0A0AA
+104. FISON CS11G1T0A0AA
+105. FISON CS11G0G0A0AA
+106. TYM TYM25D2GA01
+107. TYM TYM25D2GA02
+108. TYM TYM25D1GA03
+109. XINCUN XCSP1AAWH-NT
 
 SPI NOR Flash Support List:
 001. AT26DF161
