@@ -103,6 +103,7 @@
 #define _SPI_NAND_MANUFACTURER_ID_TOSHIBA		0x98
 #define _SPI_NAND_MANUFACTURER_ID_MICRON		0x2C
 #define _SPI_NAND_MANUFACTURER_ID_HEYANG		0xC9
+#define _SPI_NAND_MANUFACTURER_ID_HEYANG_2		0x01
 #define _SPI_NAND_MANUFACTURER_ID_PN			0xA1
 #define _SPI_NAND_MANUFACTURER_ID_ATO			0x9B
 #define _SPI_NAND_MANUFACTURER_ID_ATO_2			0xAD
@@ -201,6 +202,7 @@
 #define _SPI_NAND_DEVICE_ID_HYF2GQ4UHCCAE	0x5A
 #define _SPI_NAND_DEVICE_ID_HYF1GQ4UDACAE	0x21
 #define _SPI_NAND_DEVICE_ID_HYF2GQ4UDACAE	0x22
+#define _SPI_NAND_DEVICE_ID_HYF2GQ4UTACAE	0x25
 #define _SPI_NAND_DEVICE_ID_PN26G01AWSIUG	0xE1
 #define _SPI_NAND_DEVICE_ID_PN26G02AWSIUG	0xE2
 #define _SPI_NAND_DEVICE_ID_PN26Q01AWSIUG	0xC1
@@ -1303,6 +1305,20 @@ static const struct SPI_NAND_FLASH_INFO_T spi_nand_flash_tables[] = {
 		device_size:				_SPI_NAND_CHIP_SIZE_2GBIT,
 		page_size:				_SPI_NAND_PAGE_SIZE_2KBYTE,
 		oob_size:				_SPI_NAND_OOB_SIZE_64BYTE,
+		erase_size:				_SPI_NAND_BLOCK_SIZE_128KBYTE,
+		dummy_mode:				SPI_NAND_FLASH_READ_DUMMY_BYTE_APPEND,
+		read_mode:				SPI_NAND_FLASH_READ_SPEED_MODE_DUAL,
+		write_mode:				SPI_NAND_FLASH_WRITE_SPEED_MODE_SINGLE,
+		feature:				SPI_NAND_FLASH_FEATURE_NONE,
+	},
+
+	{
+		mfr_id:					_SPI_NAND_MANUFACTURER_ID_HEYANG_2,
+		dev_id:					_SPI_NAND_DEVICE_ID_HYF2GQ4UTACAE,
+		ptr_name:				"HEYANG HYF2GQ4UTACAE",
+		device_size:				_SPI_NAND_CHIP_SIZE_2GBIT,
+		page_size:				_SPI_NAND_PAGE_SIZE_2KBYTE,
+		oob_size:				_SPI_NAND_OOB_SIZE_128BYTE,
 		erase_size:				_SPI_NAND_BLOCK_SIZE_128KBYTE,
 		dummy_mode:				SPI_NAND_FLASH_READ_DUMMY_BYTE_APPEND,
 		read_mode:				SPI_NAND_FLASH_READ_SPEED_MODE_DUAL,
@@ -2855,7 +2871,8 @@ static SPI_NAND_FLASH_RTN_T ecc_fail_check( u32 page_number )
 			rtn_status = SPI_NAND_FLASH_RTN_DETECTED_BAD_BLOCK;
 		}
 	}
-	else if(ptr_dev_info_t->mfr_id == _SPI_NAND_MANUFACTURER_ID_HEYANG)
+	else if((ptr_dev_info_t->mfr_id == _SPI_NAND_MANUFACTURER_ID_HEYANG) ||
+		(ptr_dev_info_t->mfr_id == _SPI_NAND_MANUFACTURER_ID_HEYANG_2))
 	{
 		if(((status & 0x30) >> 4) == 0x2)
 		{
@@ -3804,7 +3821,8 @@ static void spi_nand_manufacturer_init( struct SPI_NAND_FLASH_INFO_T *ptr_device
 			_SPI_NAND_DEBUG_PRINTF(SPI_NAND_FLASH_DEBUG_LEVEL_1,"After Unlock all block setup, the die %d status register1 = 0x%x\n", _die_id, feature);
 		}
 	}
-	else if( (ptr_device_t->mfr_id) == _SPI_NAND_MANUFACTURER_ID_HEYANG)
+	else if((ptr_device_t->mfr_id == _SPI_NAND_MANUFACTURER_ID_HEYANG) ||
+		(ptr_device_t->mfr_id == _SPI_NAND_MANUFACTURER_ID_HEYANG_2))
 	{
 		/* 1. Unlock All block */
 		spi_nand_protocol_get_status_reg_1(&feature);
